--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -9,21 +9,21 @@
     <div class="footer-extras">
         <div class="content">
             <a href="<?php echo Mage::getUrl('', array('_direct' => 'topshop')); ?>">
-                <img class="lazy"
+                <img loading="lazy" class="lazy"
                      src="<?php echo $this->getSkinUrl('dist/assets/img/zh_topshop_23-24.png'); ?>"
                      alt="ComputerBild TopShop 2023 Gastronomiebedarf"
                      width="197"
                      height="64"
                 />
             </a>
-            <img class="footer-logo lazy"
+            <img loading="lazy" class="footer-logo lazy"
                  src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
                  alt="Gastrodax Logo"
                  width="240"
                  height="46"
             />
             <a href="https://www.newgastroline.de" target="_blank">
-                <img class="lazy"
+                <img loading="lazy" class="lazy"
                      src="<?php echo $this->getSkinUrl('dist/assets/img/33_years_ng.png') ?>"
                      alt="33 Jahre New Gastroline GmbH"
                      width="80"
@@ -202,32 +202,32 @@
             <ul>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#paypal')); ?>">
-                        <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/paypal-white.png') ?>"
+                        <img loading="lazy" class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/paypal-white.png') ?>"
                              alt="PayPal Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#moneyorder')); ?>">
-                        <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/vorkasse-white.png') ?>"
+                        <img loading="lazy" class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/vorkasse-white.png') ?>"
                              alt="Vorkasse Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#creditcard')); ?>">
-                        <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/creditcard-white.png') ?>"
+                        <img loading="lazy" class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/creditcard-white.png') ?>"
                              alt="Kreditkarte Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#invoice')); ?>">
-                        <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/invoice-white.png') ?>"
+                        <img loading="lazy" class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/invoice-white.png') ?>"
                              alt="Rechnung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#finanz')); ?>">
-                        <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/finanz-white.png') ?>"
+                        <img loading="lazy" class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/finanz-white.png') ?>"
                              alt="Finanzierung Logo" width="100" height="75"/> </a>
                 </li>
                 <li>
                     <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten#sepa')); ?>">
-                        <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/sepa-white.png') ?>"
+                        <img loading="lazy" class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/sepa-white.png') ?>"
                              alt="Sepa Lastschrift Logo" width="100" height="75"/> </a>
                 </li>
             </ul>
