--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -32,7 +32,7 @@
     <div class="header-top">
         <div class="brand">
             <a href="<?php echo $this->getUrl('') ?>" class="logo">
-                <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/gastrodax-logo.png'); ?>"
                      alt="<?php echo $this->getLogoAlt() ?>" width="300" height="58"/>
             </a>
         </div>
@@ -42,7 +42,7 @@
                 <li>
                     <a href="https://www.trustedshops.eu/buyerrating/info_X6B5E9287FD5871CE74DA1B1775EB2D64.html"
                        target="_blank" rel="nofollow noopener noreferrer">
-                        <img class="lazy" src="<?php echo $this->getSkinUrl('dist/assets/img/trusted-shops.png'); ?>"
+                        <img src="<?php echo $this->getSkinUrl('dist/assets/img/trusted-shops.png'); ?>"
                              alt="Trusted Shops Logo" width="40" height="40"/>
                     </a>
                 </li>
