change privacy link

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -251,6 +251,9 @@
                 <li>
                     <a class="hints"><?php echo $this->__('Hinweise') ?></a>
                 </li>
+                <li>
+                    <a href="#" onClick="UC_UI.showSecondLayer();"><?php echo $this->__('Privacy Settings') ?></a>
+                </li>
             </ul>
             <div class="reveal large" id="hints" data-reveal></div>
             <script>
