add usercentrics to head

--- a/app/design/frontend/foundation/default/template/page/html/head.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/head.phtml
@@ -15,6 +15,7 @@
 <link rel="preload" as="font" href="<?php echo $this->getSkinUrl('nwdthemes/revslider/public/assets/fonts/revicons/revicons.woff') ?>" crossorigin="anonymous" />
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('dist/assets/js/jquery.min.js') ?>"></script>
 <script>jQuery.noConflict();</script>
+<script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="HYJIKVnYy8M2Wm" async></script>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
