--- a/app/design/frontend/foundation/default/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart/sidebar.phtml
@@ -68,6 +68,23 @@
                             jQuery('#productAddToCartModal .qty span').html(data.qty);
                         }
                         jQuery('#offCanvasRightCart').foundation('open');
+                        //GTag data.layer push
+                        dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+                        dataLayer.push({
+                            event: "add_to_cart",
+                            ecommerce: {
+                                currency: "<?php echo Mage::app()->getStore()->getCurrentCurrencyCode() ?>",
+                                items: [
+                                    {
+                                        item_id: data.item_id,
+                                        item_name: data.item_name,
+                                        item_brand: data.item_brand,
+                                        price: data.price,
+                                        quantity: data.qty
+                                    }
+                                ]
+                            }
+                        });
                     }
                 });
             } catch (e) {
