add gpsr.html for product-tab v2 with .stack

--- a/app/design/frontend/foundation/default/template/gpsr/gpsr.phtml
+++ b/app/design/frontend/foundation/default/template/gpsr/gpsr.phtml
@@ -1,5 +1,5 @@
 <?php $product = $this->getProduct(); ?>
-<table class="hover">
+<table class="hover stack">
     <thead>
     <tr>
         <th colspan="2"><?php echo $this->__('Angaben zur Produktsicherheit'); ?></th>
